...
    // Observer for the player's timer
    private var playerPeriodicObserver: Any?
    
    override func viewDidLoad() {
        super.viewDidLoad()

        if let url = URL(string: "http://traffic.libsyn.com/cocoaconf/CocoaConf001.m4a") {
            set(url: url)
        }
    }

    override func didReceiveMemoryWarning() {
        super.didReceiveMemoryWarning()
...
    override func observeValue(forKeyPath keyPath: String?,
                               of object: Any?,
                               change: [NSKeyValueChangeKey : Any]?,
                               context: UnsafeMutableRawPointer?)
    {
        if keyPath == "rate", let player = object as? AVPlayer {
            playPauseButton.setTitle(player.rate == 0 ? "Play" : "Pause", for: .normal)
        }
    }

    deinit {
        player?.removeObserver(self, forKeyPath: "rate")

...
